--- a/pesq_43.html
+++ b/pesq_43.html
@@ -189,6 +189,29 @@ $(document).ready(function () {
               </div>
       </div>
     </div>
+
+    <div class="col-sm-3 col-lg-3">
+      <div class="half-unit">
+          <dtitle>ROTA</dtitle>
+          <hr>
+            <div class="clockcenter">
+              <a href="TPR141.html"><h1><strong>TPR 141</strong></h1> </a>
+            </div>
+    </div>
+  </div>
+
+
+  <div class="col-sm-3 col-lg-3">
+    <div class="half-unit">
+        <dtitle>ROTA</dtitle>
+        <hr>
+          <div class="clockcenter">
+            <a href="trot40.html"><h1><strong>TROT 40</strong></h1> </a>
+          </div>
+  </div>
+</div>
+
+    
    
 
 
