--- a/pesq_dlu_45.html
+++ b/pesq_dlu_45.html
@@ -492,6 +492,48 @@ $(document).ready(function () {
 </div>
 
 
+<div class="col-sm-3 col-lg-3">
+  <div class="half-unit">
+       <dtitle>ROTA</dtitle>
+       <hr>
+         <div class="clockcenter">
+          <a href="pesq.php?rota=https://www.google.com/maps/d/u/0/embed?mid=11L4HV6DYDKsU0qIp7y2o_2fwbgIPMznL"><h1><strong>LJS - RBN</strong></h1></a> 
+         </div>
+ </div>
+</div>
+
+
+<div class="col-sm-3 col-lg-3">
+  <div class="half-unit">
+       <dtitle>ROTA</dtitle>
+       <hr>
+         <div class="clockcenter">
+          <a href="pesq.php?rota=https://www.google.com/maps/d/u/0/embed?mid=1vgTsa8JIW9uMtfMBepz8hiamYAwbX1sg"><h1><strong>TOO - VCO</strong></h1></a> 
+         </div>
+ </div>
+</div>
+
+
+<div class="col-sm-3 col-lg-3">
+  <div class="half-unit">
+       <dtitle>ROTA</dtitle>
+       <hr>
+         <div class="clockcenter">
+          <a href="https://www.google.com/maps/d/u/0/embed?mid=1YDdReiXLotsZaAM5oxyE4CsolUurFuZs"><h1><strong>TPR7 TOO ASD</strong></h1></a> 
+         </div>
+ </div>
+</div>
+
+<div class="col-sm-3 col-lg-3">
+  <div class="half-unit">
+       <dtitle>ROTA</dtitle>
+       <hr>
+         <div class="clockcenter">
+          <a href="https://www.google.com/maps/d/u/0/embed?mid=1PNMPrdaQ49NEPussgL85NED_--CgXkzl"><h1><strong>TOO VCO</strong></h1></a> 
+         </div>
+ </div>
+</div>
+
 
 
 
